--- a/Frontend/template/pages/LandingPage.html
+++ b/Frontend/template/pages/LandingPage.html
@@ -38,7 +38,7 @@ NAVBAR
         <div class="navbar-ingresar">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Ingresar</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Ingresar</a>
                  </li>
              </ul>
         </div>    
@@ -81,7 +81,7 @@ SECCION BANNER
       <h1>  Sistema de pre-apertura </h1>
       <h1>  <b> de cuenta Bancaria </b></h1>
       <p> Realiza tu solicitud desde la comodidad de tu hogar, con el sistema más seguro de todo el País</p>
-      <a class="nav-link active" aria-current="page" href="#">Me Interesa</a>
+      <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Me Interesa</a>
     </div>
   </div>
 
