--- a/Frontend/static/css/styleBase2.css
+++ b/Frontend/static/css/styleBase2.css
@@ -100,18 +100,18 @@
              form
   ------------------------------*/
 
-.formContainer {
+  .formContainer {
     width: 25%;
-    height: 390px;
+    height: 450px;
     background: white;
     border-radius: 15px;
     -webkit-box-shadow: 0px 0px 8px 2px rgba(138, 134, 138, 1);
     -moz-box-shadow: 0px 0px 8px 2px rgba(138, 134, 138, 1);
     box-shadow: 0px 0px 8px 2px rgba(138, 134, 138, 1);
-    padding: 10px;
+    padding: 20px;
     position: absolute;
-    left: 100px;
-    top: 20vh;
+    left: 80px;
+    top: 15vh;
 }
 
 .form-text {
@@ -122,13 +122,16 @@
     width: 100%;
     height: 50px;
 }
+.form-control{
+    height: 50px;
+}
 
 /*------------------------------
               card
   ------------------------------*/
 
-.cad-content {
-    width: 70%;
+  .cad-content {
+    width: 65%;
     float: right;
 }
 
